<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="comp3350.srsys.presentation.HomeActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_records_system" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageMortarboard"
        android:src="@drawable/mortarboard"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonStudents"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonStudentsOnClick"
            android:text="@string/students" />

        <Button
            android:id="@+id/buttonCourses"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:onClick="buttonCoursesOnClick"
            android:text="@string/courses" />

        <Button
            android:id="@+id/buttonGraph"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:onClick="buttonGraphOnClick"
            android:text="@string/graph" />

        <Button
            android:id="@+id/buttonMyRoutines"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonMyRoutinesOnClick"
            android:text="My Routines" />

    </LinearLayout>



</RelativeLayout>
